# h

./: CONTRIBUTING.md  Cargo.toml  HACKING.md  README.md  check.sh  doc.sh
.github/workflows/: test.yaml
h/: Cargo.toml
h-bare/: Cargo.toml
h-bare/src/: algorithms.rs  bitmap.rs  codegen.rs  const_vec.rs  hash.rs  lib.rs  map.rs  phf.rs  scatter.rs  set.rs  unhashed_phf.rs  untyped_phf.rs
h-bare/src/tests/: mod.rs
h-macros/: Cargo.toml
h-macros/src/: codegen.rs  coding.rs  constants.rs  hashing.rs  lib.rs  parse.rs  types.rs  values.rs
h-test/: Cargo.toml  build.rs
h-test/src/: main.rs
h/src/: codegen.rs  const_vec.rs  constant.rs  hash.rs  hashed.rs  hashfn.rs  lib.rs  macros.rs  map.rs  phf.rs  runtime.rs  scatter.rs  set.rs  unhashed.rs  unhashed_phf.rs
h/src/generic/: hashed.rs  map.rs  mod.rs  scatter.rs  set.rs  unhashed.rs
h/src/runtime/: map.rs  mod.rs  set.rs
h/src/tests/: mod.rs
h/tests/ui/: equal_keys.rs  equal_keys.stderr  expressions.rs  expressions.stderr  integer_too_large.rs  integer_too_large.stderr  negate_unsigned.rs  negate_unsigned.stderr  type_annotation_incorrect.rs  type_annotation_incorrect.stderr  type_annotations_needed.rs  type_annotations_needed.stderr  types.rs  types.stderr  unify.rs  unify.stderr  unsizing_slice.rs  unsizing_slice.stderr
src/: codegen.rs  hashed.rs  hashfn.rs  lib.rs  map.rs  phf.rs  set.rs  state.rs  table.rs  unhashed.rs
src/tests/: english.txt.zst  mod.rs  rockyou.txt.zst
tests/: stress.rs
