[package]
name = "h-bare"
description = "Practical, efficient perfect hash functions"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesyringa/h"
readme = "README.md"
keywords = ["perfect", "hashing", "phf"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]
edition = "2021"

[dependencies]
const-dispatch = { version = "0.1.0", optional = true }
displaydoc = { version = "0.2.5", optional = true, default-features = false }
fixed-slice-vec = { version = "0.10.0", optional = true }
proc-macro2 = { version = "1", optional = true, default-features = false }
quote = { version = "1", optional = true }
rapidhash = { version = "1.1.0", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
thiserror = { version = "2.0.3", optional = true, default-features = false }
typeid = { version = "1.0.2", optional = true }

[dev-dependencies]
ruzstd = { version = "0.8.0", default-features = false }

[features]
default = ["std"]
alloc = ["serde?/alloc"]
build = ["alloc", "dep:const-dispatch", "dep:fixed-slice-vec"]
codegen = ["std", "dep:proc-macro2", "dep:quote", "dep:typeid"]
serde = ["dep:displaydoc", "dep:serde", "dep:thiserror"]
std = ["alloc", "ruzstd/std"]

[lints]
workspace = true
