[package]
name = "h-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"] }
h = { package = "h-bare", path = "../h-bare", features = ["build", "codegen"] }
proc-macro-error2 = "2.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }
