[package]
name = "h-macros"
description = "Practical, efficient perfect hash functions (procedural macros)"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesyringa/h"
readme = "README.md"
keywords = ["perfect", "hashing", "phf", "proc-macro"]
categories = ["data-structures"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"] }
h = { package = "h-bare", path = "../h-bare", features = ["build", "codegen"] }
proc-macro-error2 = "2.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }

[lints]
workspace = true
