[package]
name = "h-test"
version = "0.1.0"
edition = "2021"

[dependencies]
h = { path = "../h" }

[build-dependencies]
h = { path = "../h", features = ["build", "codegen"] }
ruzstd = { git = "https://github.com/KillingSpark/zstd-rs", rev = "1d3f062ab57aa91344e027bca0430f5136ea0c7c" }

[features]
enabled = []

[lints]
workspace = true
