[package]
name = "h-test"
version = "0.1.0"
edition = "2021"

[dependencies]
h = { path = "../h" }

[build-dependencies]
h = { path = "../h", features = ["build", "codegen"] }
ruzstd = { version = "0.8.0", default-features = false, features = ["std"] }

[features]
enabled = []

[lints]
workspace = true
