[package]
name = "h"
description = "Practical, efficient perfect hash functions"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesyringa/h"
readme = "README.md"
keywords = ["perfect", "hashing", "phf"]
categories = ["data-structures", "no-std"]
edition = "2021"

[dependencies]
proc-macro2 = { version = "1", optional = true, default-features = false }
quote = { version = "1", optional = true }
radsort = { version = "0.1.1", optional = true }
rapidhash = { version = "1.1.0", default-features = false }
rkyv = { version = "0.8.8", default-features = false }
typeid = "1.0.2"

[dev-dependencies]
zstd = "0.13.2"

[features]
default = ["std"]
alloc = []
build = ["alloc", "dep:radsort"]
codegen = ["std", "dep:proc-macro2", "dep:quote"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
