[package]
name = "h"
description = "Practical, efficient perfect hash functions"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/purplesyringa/h"
readme = "README.md"
keywords = ["perfect", "hashing", "phf"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]
edition = "2021"

[dependencies]
h-bare = { path = "../h-bare", default-features = false }
h-macros = { path = "../h-macros", optional = true }

[features]
# Keep this in sync with features from the `h-bare` crate.
default = ["std"]
alloc = ["h-bare/alloc"]
build = ["alloc", "h-bare/build"]
codegen = ["std", "h-bare/codegen"]
macros = ["dep:h-macros"]
serde = ["h-bare/serde"]
std = ["alloc", "h-bare/std"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
